--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - bash: mvn clean install
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
