--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,6 +5,8 @@ metadata:
 spec:
     type: LoadBalancer
     ports:
-    - port: 80 
+      - protocol: TCP
+        port: 80
+        targetPort: 8080
     selector:
         app: azuredemo
