--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,4 @@ jobs:
         azcliversion: 2.0.72
         inlineScript: |
           ls
-          az storage blob upload-batch --source . --destination test1 --account-name brimmastorage --sas-token ${{ secrets.AZURE_STORAGE_SAS_TOKEN }}
+          az storage blob upload-batch --source Jenkinsfile --destination test1 --account-name brimmastorage --sas-token ${{ secrets.AZURE_STORAGE_SAS_TOKEN }}
