--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         azcliversion: 2.0.72
         inlineScript: |
-          ls
+          pwd
           az storage blob upload-batch --source Jenkinsfile --destination test1 --account-name brimmastorage --sas-token ${{ secrets.AZURE_STORAGE_SAS_TOKEN }}
